force-app/main/default/objects/FailedPayload__c/FailedPayload__c.object-meta.xml
<CustomObject>
    <label>FailedPayload</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FailedPayloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>