force-app/main/default/objects/FailedPayload__c/fields/IsResolved__c.field-meta.xml
<CustomField>
    <fullName>IsResolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsResolved</label>
    <type>Checkbox</type>
</CustomField>