force-app/main/default/objects/FailedPayload__c/fields/statusCode__c.field-meta.xml
<CustomField>
    <fullName>statusCode__c</fullName>
    <label>statusCode</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>